crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__error_empty_word.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
expression: result
---
Err(
    ParseErrors {
        errors: [
            ParseError {
                code: MissingNode,
                severity: Error,
                location: SourceLocation {
                    span: Span {
                        start: 108,
                        end: 108,
                    },
                },
                context: ErrorContext {
                    source_text: "",
                    span: Span {
                        start: 108,
                        end: 0,
                    },
                    expected: [],
                    found: "",
                },
                message: "Missing 'zero'",
                suggestion: Some(
                    "Add missing zero",
                ),
                help_url: Some(
                    "https://talkbank.org/errors/E302",
                ),
            },
        ],
    },
)
