crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__error_invalid_form_type.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
expression: result
---
Err(
    ParseErrors {
        errors: [
            ParseError {
                code: SyntaxError,
                severity: Error,
                location: SourceLocation {
                    span: Span {
                        start: 5,
                        end: 7,
                    },
                },
                context: ErrorContext {
                    source_text: "hello@z",
                    span: Span {
                        start: 5,
                        end: 7,
                    },
                    expected: [],
                    found: "@z",
                },
                message: "Syntax error",
                suggestion: None,
                help_url: Some(
                    "https://talkbank.org/errors/E303",
                ),
            },
        ],
    },
)
