crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__error_missing_form_type.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
expression: result
---
Err(
    ParseErrors {
        errors: [
            ParseError {
                code: SyntaxError,
                severity: Error,
                location: SourceLocation {
                    span: Span {
                        start: 5,
                        end: 6,
                    },
                },
                context: ErrorContext {
                    source_text: "hello@",
                    span: Span {
                        start: 5,
                        end: 6,
                    },
                    expected: [],
                    found: "@",
                },
                message: "Syntax error",
                suggestion: None,
                help_url: Some(
                    "https://talkbank.org/errors/E303",
                ),
            },
        ],
    },
)
