crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__error_unclosed_shortening.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
expression: result
---
Err(
    ParseErrors {
        errors: [
            ParseError {
                code: MissingNode,
                severity: Error,
                location: SourceLocation {
                    span: Span {
                        start: 6,
                        end: 6,
                    },
                },
                context: ErrorContext {
                    source_text: "hel(lo",
                    span: Span {
                        start: 6,
                        end: 6,
                    },
                    expected: [],
                    found: "",
                },
                message: "Missing 'right_paren'",
                suggestion: Some(
                    "Add missing right_paren",
                ),
                help_url: Some(
                    "https://talkbank.org/errors/E302",
                ),
            },
        ],
    },
)
