crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__overlap_marker_all_types_excluded.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
expression: result
---
Ok(
    Word {
        span: Span {
            start: 107,
            end: 127,
        },
        word_id: None,
        raw_text: "w⌈or⌉d⌊te⌋st",
        cleaned_text: "wordtest",
        content: [
            Text {
                text: "w",
            },
            Text {
                text: "⌈",
            },
            Text {
                text: "or",
            },
            Text {
                text: "⌉",
            },
            Text {
                text: "d",
            },
            Text {
                text: "⌊",
            },
            Text {
                text: "te",
            },
            Text {
                text: "⌋",
            },
            Text {
                text: "st",
            },
        ],
        category: None,
        form_type: None,
        untranscribed: None,
        lang: None,
        part_of_speech: None,
    },
)
