crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__overlap_marker_at_beginning.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
expression: result
---
Ok(
    Word {
        span: Span {
            start: 107,
            end: 115,
        },
        word_id: None,
        raw_text: "⌊hello",
        cleaned_text: "hello",
        content: [
            Text {
                text: "⌊",
            },
            Text {
                text: "hello",
            },
        ],
        category: None,
        form_type: None,
        untranscribed: None,
        lang: None,
        part_of_speech: None,
    },
)
