crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__overlap_marker_complex_excluded.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
expression: result
---
Ok(
    Word {
        span: Span {
            start: 107,
            end: 119,
        },
        word_id: None,
        raw_text: "ye⌉2⌊3:s",
        cleaned_text: "ye:s",
        content: [
            Text {
                text: "ye",
            },
            Text {
                text: "⌉2",
            },
            Text {
                text: "⌊3",
            },
            Text {
                text: ":",
            },
            Text {
                text: "s",
            },
        ],
        category: None,
        form_type: None,
        untranscribed: None,
        lang: None,
        part_of_speech: None,
    },
)
