crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__overlap_marker_midword_excluded.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
expression: result
---
Ok(
    Word {
        span: Span {
            start: 107,
            end: 120,
        },
        word_id: None,
        raw_text: "a⌋2⌈3side",
        cleaned_text: "aside",
        content: [
            Text {
                text: "a",
            },
            Text {
                text: "⌋2",
            },
            Text {
                text: "⌈3",
            },
            Text {
                text: "side",
            },
        ],
        category: None,
        form_type: None,
        untranscribed: None,
        lang: None,
        part_of_speech: None,
    },
)
