crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__overlap_marker_numbered_excluded.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
expression: result
---
Ok(
    Word {
        span: Span {
            start: 107,
            end: 122,
        },
        word_id: None,
        raw_text: "test⌋1⌈2ing",
        cleaned_text: "testing",
        content: [
            Text {
                text: "test",
            },
            Text {
                text: "⌋1",
            },
            Text {
                text: "⌈2",
            },
            Text {
                text: "ing",
            },
        ],
        category: None,
        form_type: None,
        untranscribed: None,
        lang: None,
        part_of_speech: None,
    },
)
