crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__overlap_marker_simple_excluded_from_cleaned_text.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
expression: result
---
Ok(
    Word {
        span: Span {
            start: 107,
            end: 119,
        },
        word_id: None,
        raw_text: "Yeah⌋⌈2:",
        cleaned_text: "Yeah:",
        content: [
            Text {
                text: "Yeah",
            },
            Text {
                text: "⌋",
            },
            Text {
                text: "⌈2",
            },
            Text {
                text: ":",
            },
        ],
        category: None,
        form_type: None,
        untranscribed: None,
        lang: None,
        part_of_speech: None,
    },
)
