crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__simplest_word.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
assertion_line: 20
expression: result
---
Ok(
    Word {
        span: Span {
            start: 107,
            end: 112,
        },
        word_id: None,
        raw_text: "hello",
        cleaned_text: "hello",
        content: [
            Text {
                text: "hello",
            },
        ],
        category: None,
        form_type: None,
        untranscribed: None,
        lang: None,
        part_of_speech: None,
    },
)
