crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__word_with_filler_category.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
assertion_line: 90
expression: result
---
Ok(
    Word {
        span: Span {
            start: 107,
            end: 111,
        },
        word_id: None,
        raw_text: "&-uh",
        cleaned_text: "uh",
        content: [
            Text {
                text: "uh",
            },
        ],
        category: Some(
            Filler,
        ),
        form_type: None,
        untranscribed: None,
        lang: None,
        part_of_speech: None,
    },
)
